# apg

./: .gitignore  .gitmodules  FINAL_SYSTEM_REPORT.md  FINAL_SYSTEM_SUMMARY.md  MARKETPLACE_COMPLETION_REPORT.md  README.md  SYSTEM_CAPABILITIES_REPORT.md  TODO.md  apg_comprehensive_app.py  cli.py  complete_demo.py  create_advanced_ai_capabilities.py  create_business_intelligence_capabilities.py  create_cloud_capabilities.py  create_community_system.py  create_iot_capabilities.py  create_performance_capabilities.py  create_security_capabilities.py  create_template_structure.py  demo_functional_output.py  failed_repos.txt  history.md  implementation_roadmap.py  requirements_flask_appbuilder.txt  setup.py  setup_composable_templates.py  test_cli_composable_only.py  test_complete_app_generation.py  test_composable_integration.py  test_composition_engine.py  test_deployment_system.py  test_edge_computing_simple.py  test_enhanced_cli.py  test_expanded_capabilities.py  test_final_verification.py  test_functional_generation.py  test_generated_output.py  test_integrated_code_generation.py  test_learning_system.py  test_marketplace_system.py  (+2 more)
.claude/commands/: README.md  dev.md
agents/: __init__.py  architect_agent.py  base_agent.py  cli.py  deployment_manager.py  developer_agent.py  devops_agent.py  learning_engine.py  orchestrator.py  tester_agent.py
agents/docker/: Dockerfile  docker-compose.yml  nginx.conf  prometheus.yml  requirements.txt
apg_demo_output/: app.py  config.py  model_views.py  models.py  requirements.txt  run_demo.py
apg_demo_output/templates/: agent_dashboard.html
capabilities/: README.md  README_NEW.md  __init__.py  __init___NEW.py  comprehensive_capabilities.py  dev_order.md  erp_ecommerce_marketplace_specifications.py  migration_to_v2.py
capabilities/audio_processing/: APG_MARKETPLACE.md  __init__.py  api.py  cap_spec.md  deployment.py  models.py  monitoring.py  service.py  todo.md  views.py
capabilities/audit_compliance/: __init__.py  desired_outcome.md  models.py  service.py  userguide.md  views.py
capabilities/auth_rbac/: __init__.py  abac_models.py  abac_service.py  desired_outcome.md  exceptions.py  models.py  service.py  userguide.md  views.py
capabilities/blockchain_security/: __init__.py  desired_outcome.md  models.py  service.py  userguide.md  views.py
capabilities/composition/: __init__.py  blueprint_manager.py  database.py  database_manager.py  registry.py  requirements.txt
capabilities/composition_orchestration/: __init__.py
capabilities/computer_vision/: __init__.py  enhanced_views.py  models.py  service.py  views.py
capabilities/core_business_operations/: __init__.py
capabilities/digital_twin/: service.py
capabilities/digital_twin_marketplace/: __init__.py  models.py  service.py  views.py
capabilities/distributed_computing/: service.py
capabilities/edge_computing/: __init__.py  service.py  views.py
capabilities/emerging_technologies/: __init__.py
capabilities/federated_learning/: __init__.py  models.py  service.py  views.py
capabilities/financial_management/: __init__.py  models.py  service.py  views.py
capabilities/general_cross_functional/: __init__.py  blueprint.py
capabilities/human_resources/: __init__.py
capabilities/industry_vertical_solutions/: __init__.py
capabilities/intelligent_orchestration/: __init__.py  models.py  service.py  views.py
capabilities/inventory_management/: __init__.py  blueprint.py
capabilities/iot_management/: __init__.py  enhanced_views.py  service.py  views.py
capabilities/manufacturing/: blueprint.py
capabilities/mining_specific/: __init__.py
capabilities/product_catalog/: views.py  (+3 more)
cli/: compile_command.py  create_project.py  main.py  run_command.py  validate_command.py
common/: __init__.py  base.py
compiler/: __init__.py  ast_builder.py  code_generator.py  compiler.py  parser.py  semantic_analyzer.py
database/: init_postgresql.py
docs/: erp_capabilties.csv  language_reference.md  marketplace_microservices_guide.md  proposed_capability_architecture.md  workflow_reference.md
examples/: FEEL_1_1.g4  README.md  RuleSet.g4  ai_agent_systems.apg  basic_applications.apg  business_erp.apg  cel.g4  comprehensive_digital_twin_demo.py  digital_twin_examples.apg  marketplace_platform.apg  microservices_architecture.apg  module_system_demo.apg  osint_intelligence.apg  production_line_monitoring.apg  requirements.txt  spec.g4  sync_and_maintenance.apg  vision_iot_app.py  working_digital_twin_showcase.py
language_server/: __init__.py  client.py  server.py
marketplace/: README.md  capability_marketplace.py  capability_template.json  cli.py  web_api.py
mobile_apps/: IMPLEMENTATION_COMPLETE.md
mobile_apps/beeware/: README.md  pyproject.toml  requirements.txt
mobile_apps/beeware/src/apg_workflow_mobile/: __init__.py  app.py
mobile_apps/beeware/src/apg_workflow_mobile/models/: __init__.py  task.py  user.py  workflow.py
mobile_apps/beeware/src/apg_workflow_mobile/services/: __init__.py  api_service.py  auth_service.py
mobile_apps/beeware/src/apg_workflow_mobile/utils/: __init__.py  constants.py  exceptions.py
ref/: types.txt
templates/: __init__.py  application_template_manager.py  project_scaffolder.py  template_manager.py  template_types.py
tests/: __init__.py  test_parser.py  test_semantic_analyzer.py
tmp/: AppGen.g4  AppGenLexer1.g4  AppGenParser.g4  AppGenq.g4  DBML1.g4  DBML2.g4  DBML3.g4  agen.g4  apg.g4  apg.g4 copy  apg1.g4  apg2.g4  apg3.g4  apg4.g4  apg5.g4  apg6.g4  apg7.g4  apg8.g4  apg9.g4  apg_v1.g4  apg_v10.g4  apg_v5.g4  apg_v6.g4  apg_v7.g4  apg_v8.g4  apg_v9.g4  apglexer.g4  apgparser.g4  app.g4  appgen.g4 copy  appgen_old.g4  dbml.g4  test.ags
vscode-extension/: README.md  language-configuration.json  package.json
(+2751 files in other folders)
